# QT-YOLO-OCR-CPP

./: CMakeLists.txt  README.md
algorithm/: CRHTrainTypeAlg.cpp  CRHTrainTypeAlg.h  MetroTypeAlg.cpp  MetroTypeAlg.h  TrainNumberDetector.cpp  TrainNumberDetector.h
ocr/: paddleocr.cpp  paddleocr.h
src/: SideTrainNumberRec.cpp  SideTrainNumberRec.h  SideTrainNumberRec.ui  ThreadManager.cpp  ThreadManager.h  configread.cpp  configread.h  filetools.cpp  filetools.h  header.h  main.cpp
yolo/: model.cpp  model.hpp  option.hpp  pybind.cpp  result.hpp
yolo/core/: buffer.cpp  core.cpp  core.hpp
yolo/infer/: backend.cpp  backend.hpp  warpaffine.cu  warpaffine.hpp
yolo/lib/: deploy.exp
yolo/lib/plugin/: custom_plugins.exp  custom_plugins.lib
yolo/utils/: utils.cpp  utils.hpp
